--- a/index.html
+++ b/index.html
@@ -2,17 +2,38 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>AP BPS Planner</title>
+    <title>BPS Planner – Andhra Pradesh</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <!-- Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- Font Awesome for social icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
 
   <body class="min-h-screen bg-slate-100 text-slate-900">
+    <!-- PRELOADER -->
+    <div
+      id="preloader"
+      class="fixed inset-0 bg-slate-900/80 flex flex-col items-center justify-center z-40"
+    >
+      <div
+        class="w-12 h-12 border-4 border-white border-t-transparent rounded-full animate-spin mb-4"
+      ></div>
+      <p class="text-white text-sm">Loading BPS Planner...</p>
+    </div>
+
     <!-- Screenshot banner -->
     <div
       id="screenshotBanner"
-      class="hidden fixed top-0 inset-x-0 z-20 bg-amber-500 text-white px-4 py-2 flex items-center justify-between shadow-md"
+      class="hidden fixed top-0 inset-x-0 z-30 bg-amber-500 text-white px-4 py-2 flex items-center justify-between shadow-md"
     >
       <span class="text-sm md:text-base font-medium">
         Screenshot mode ON – take your screenshot and click “Exit screenshot
@@ -26,24 +47,96 @@
       </button>
     </div>
 
-    <div class="max-w-5xl mx-auto px-4 pt-6 pb-10 space-y-6">
-      <!-- Header -->
-      <header class="flex flex-col md:flex-row md:items-center md:justify-between gap-3">
-        <div>
-          <h1 class="text-2xl md:text-3xl font-bold tracking-tight">
-            BPS Planner – Andhra Pradesh
-          </h1>
-          <p class="text-sm md:text-base text-slate-600">
-            Quick helper for building regularisation & BPS related checks in
-            Guntur & Vijayawada.
-          </p>
+    <!-- NAVBAR -->
+    <nav
+      class="bg-white/90 backdrop-blur sticky top-0 z-20 border-b border-slate-200"
+    >
+      <div
+        class="max-w-5xl mx-auto px-4 py-3 flex items-center justify-between gap-4"
+      >
+        <!-- Logo / brand -->
+        <div class="flex items-center gap-2">
+          <div
+            class="w-8 h-8 rounded-xl bg-blue-600 text-white flex items-center justify-center text-sm font-bold"
+          >
+            BPS
+          </div>
+          <div>
+            <h1
+              class="text-base md:text-lg font-semibold leading-tight"
+              data-i18n="title"
+            >
+              BPS Planner – Andhra Pradesh
+            </h1>
+            <p
+              class="text-xs md:text-sm text-slate-500"
+              data-i18n="subtitle"
+            >
+              Quick helper for building regularisation in Guntur & Vijayawada.
+            </p>
+          </div>
         </div>
+
+        <!-- Nav links -->
+        <div class="hidden md:flex items-center gap-4 text-sm font-medium">
+          <a
+            href="#planner"
+            class="text-slate-700 hover:text-blue-600"
+            data-i18n="navPlanner"
+            >Planner</a
+          >
+          <a
+            href="#rulesSection"
+            class="text-slate-700 hover:text-blue-600"
+            data-i18n="navRules"
+            >Rules</a
+          >
+          <a
+            href="#contact"
+            class="text-slate-700 hover:text-blue-600"
+            data-i18n="navContact"
+            >Contact</a
+          >
+        </div>
+
+        <!-- Language switch -->
+        <div class="flex items-center gap-2 text-xs md:text-sm">
+          <button
+            id="langEn"
+            class="px-2 py-1 rounded border border-slate-300 bg-white font-semibold"
+          >
+            EN
+          </button>
+          <button
+            id="langTe"
+            class="px-2 py-1 rounded border border-transparent text-slate-600"
+          >
+            TE
+          </button>
+        </div>
+      </div>
+    </nav>
+
+    <!-- PAGE CONTENT -->
+    <div class="max-w-5xl mx-auto px-4 pt-6 pb-20 space-y-6">
+      <!-- Header controls -->
+      <header
+        class="flex flex-col md:flex-row md:items-center md:justify-between gap-3"
+      >
+        <p
+          class="text-sm md:text-base text-slate-600 max-w-xl"
+          data-i18n="heroText"
+        >
+          Use this simple planner to quickly check basic BPS-related details for
+          your building projects in Andhra Pradesh.
+        </p>
 
         <!-- Top buttons -->
         <div class="flex flex-wrap gap-3">
           <button
             id="screenshotToggleBtn"
             class="px-4 py-2 text-sm font-medium rounded-lg border border-slate-300 bg-white hover:bg-slate-50"
+            data-i18n="btnScreenshot"
           >
             Turn on screenshot mode
           </button>
@@ -51,24 +144,37 @@
           <button
             id="rulesToggleBtn"
             class="px-4 py-2 text-sm font-medium rounded-lg bg-blue-600 text-white hover:bg-blue-700"
+            data-i18n="btnRules"
           >
             Show BPS Rules (Image)
           </button>
         </div>
       </header>
 
-      <!-- Main card (your planner UI / form etc) -->
+      <!-- MAIN PLANNER CARD -->
       <main
+        id="planner"
         class="bg-white rounded-2xl shadow-md border border-slate-200 p-4 md:p-6 space-y-4"
       >
-        <h2 class="text-lg md:text-xl font-semibold">
+        <h2
+          class="text-lg md:text-xl font-semibold"
+          data-i18n="plannerHeading"
+        >
           Project Details / BPS Check
         </h2>
+        <p
+          class="text-sm md:text-base text-slate-600"
+          data-i18n="plannerDesc"
+        >
+          Fill these basic details to estimate how your building may fall under
+          BPS / regularisation norms.
+        </p>
 
-        <!-- Put your existing form / options here -->
-        <div class="grid md:grid-cols-2 gap-4 text-sm md:text-base">
+        <div class="grid md:grid-cols-2 gap-4 text-sm md:text-base mt-2">
           <div class="space-y-2">
-            <label class="block text-slate-700 font-medium"
+            <label
+              class="block text-slate-700 font-medium"
+              data-i18n="labelMunicipality"
               >Municipality / Corporation</label
             >
             <select
@@ -83,7 +189,9 @@
           </div>
 
           <div class="space-y-2">
-            <label class="block text-slate-700 font-medium"
+            <label
+              class="block text-slate-700 font-medium"
+              data-i18n="labelPlotSize"
               >Plot size (sq. yards)</label
             >
             <input
@@ -94,7 +202,9 @@
           </div>
 
           <div class="space-y-2">
-            <label class="block text-slate-700 font-medium"
+            <label
+              class="block text-slate-700 font-medium"
+              data-i18n="labelFloors"
               >No. of floors</label
             >
             <input
@@ -104,7 +214,9 @@
           </div>
 
           <div class="space-y-2">
-            <label class="block text-slate-700 font-medium"
+            <label
+              class="block text-slate-700 font-medium"
+              data-i18n="labelUsage"
               >Usage type</label
             >
             <select
@@ -119,6 +231,7 @@
 
         <button
           class="mt-3 inline-flex items-center px-4 py-2 text-sm font-semibold rounded-lg bg-emerald-600 text-white hover:bg-emerald-700"
+          data-i18n="btnCalculate"
         >
           Calculate / Check BPS
         </button>
@@ -129,15 +242,20 @@
         id="rulesSection"
         class="hidden bg-white rounded-2xl shadow-md border border-slate-200 p-4 md:p-6"
       >
-        <h2 class="text-lg md:text-xl font-semibold mb-2">
+        <h2
+          class="text-lg md:text-xl font-semibold mb-2"
+          data-i18n="rulesHeading"
+        >
           Official BPS Rules – Reference
         </h2>
-        <p class="text-sm md:text-base text-slate-600 mb-3">
-          This image contains the key BPS rules / fee details. Zoom in if
-          needed for clarity.
+        <p
+          class="text-sm md:text-base text-slate-600 mb-3"
+          data-i18n="rulesDesc"
+        >
+          This image contains key BPS rules / fee details. Zoom in if needed
+          for clarity.
         </p>
 
-        <!-- The actual image file you added: rules.jpg -->
         <div class="w-full">
           <img
             id="rulesImage"
@@ -147,9 +265,161 @@
           />
         </div>
       </section>
+
+      <!-- CONTACT SECTION -->
+      <section
+        id="contact"
+        class="bg-white rounded-2xl shadow-md border border-slate-200 p-4 md:p-6 space-y-6"
+      >
+        <div class="text-center space-y-2">
+          <h2
+            class="text-lg md:text-xl font-semibold"
+            data-i18n="contactHeading"
+          >
+            Contact Me
+          </h2>
+          <p
+            class="text-sm md:text-base text-slate-600"
+            data-i18n="contactSubtitle"
+          >
+            Feel free to reach out for any BPS related help, doubts or
+            collaboration.
+          </p>
+        </div>
+
+        <!-- Social icons row -->
+        <div class="flex justify-center gap-6 text-2xl">
+          <!-- Email -->
+          <a
+            href="mailto:mallampatisaipavan@gmail.com"
+            class="hover:text-yellow-300 transition"
+            aria-label="Email"
+          >
+            <i class="fa-solid fa-envelope"></i>
+          </a>
+
+          <!-- Instagram -->
+          <a
+            href="https://instagram.com/mallampati.saipavan"
+            target="_blank"
+            class="hover:text-pink-500 transition"
+            aria-label="Instagram"
+          >
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+
+          <!-- WhatsApp -->
+          <a
+            href="https://wa.me/9515690987"
+            target="_blank"
+            class="hover:text-green-500 transition"
+            aria-label="WhatsApp"
+          >
+            <i class="fa-brands fa-whatsapp"></i>
+          </a>
+
+          <!-- X (Twitter) -->
+          <a
+            href="https://x.com/saipavan1475"
+            target="_blank"
+            class="hover:text-slate-300 transition"
+            aria-label="X"
+          >
+            <i class="fa-brands fa-x-twitter"></i>
+          </a>
+        </div>
+
+        <!-- Contact form -->
+        <form
+          id="contactForm"
+          class="mt-6 max-w-xl mx-auto space-y-4 text-sm md:text-base"
+        >
+          <div class="grid md:grid-cols-2 gap-4">
+            <div class="space-y-1">
+              <label
+                for="contactName"
+                class="block text-slate-700 font-medium"
+                data-i18n="formNameLabel"
+                >Your name</label
+              >
+              <input
+                id="contactName"
+                type="text"
+                required
+                class="w-full rounded-lg border border-slate-300 px-3 py-2 outline-none focus:ring-2 focus:ring-blue-500"
+                placeholder="Enter your name"
+              />
+            </div>
+            <div class="space-y-1">
+              <label
+                for="contactEmail"
+                class="block text-slate-700 font-medium"
+                data-i18n="formEmailLabel"
+                >Your email</label
+              >
+              <input
+                id="contactEmail"
+                type="email"
+                required
+                class="w-full rounded-lg border border-slate-300 px-3 py-2 outline-none focus:ring-2 focus:ring-blue-500"
+                placeholder="Enter your email"
+              />
+            </div>
+          </div>
+
+          <div class="space-y-1">
+            <label
+              for="contactMessage"
+              class="block text-slate-700 font-medium"
+              data-i18n="formMessageLabel"
+              >Message</label
+            >
+            <textarea
+              id="contactMessage"
+              rows="4"
+              required
+              class="w-full rounded-lg border border-slate-300 px-3 py-2 outline-none focus:ring-2 focus:ring-blue-500"
+              placeholder="Tell me what you need help with"
+            ></textarea>
+          </div>
+
+          <button
+            type="submit"
+            class="inline-flex items-center px-4 py-2 rounded-lg bg-blue-600 text-white font-semibold hover:bg-blue-700"
+            data-i18n="formSubmit"
+          >
+            Send message
+          </button>
+        </form>
+      </section>
     </div>
 
-    <!-- Your JS -->
+    <!-- BACK TO TOP BUTTON -->
+    <button
+      id="backToTopBtn"
+      class="fixed bottom-20 right-4 md:bottom-6 md:right-6 px-3 py-2 rounded-full shadow-lg bg-slate-900 text-white text-sm hidden"
+    >
+      ↑ Top
+    </button>
+
+    <!-- FLOATING WHATSAPP CHAT BUBBLE -->
+    <a
+      href="https://wa.me/9515690987"
+      target="_blank"
+      class="fixed bottom-4 left-4 md:bottom-6 md:left-6 w-12 h-12 rounded-full bg-green-500 shadow-lg flex items-center justify-center text-white text-2xl"
+      aria-label="WhatsApp chat"
+    >
+      <i class="fa-brands fa-whatsapp"></i>
+    </a>
+
+    <!-- FOOTER -->
+    <footer class="bg-slate-900 text-white py-4">
+      <div class="max-w-5xl mx-auto px-4 text-center text-xs text-slate-400">
+        © 2025 BPS Planner — All Rights Reserved
+      </div>
+    </footer>
+
+    <!-- JS -->
     <script src="script.js"></script>
   </body>
 </html>
