--- a/index.html
+++ b/index.html
@@ -178,13 +178,16 @@
               >Municipality / Corporation</label
             >
             <select
+              id="municipalitySelect"
               class="w-full rounded-lg border border-slate-300 px-3 py-2 outline-none focus:ring-2 focus:ring-blue-500"
             >
               <option value="">Select area</option>
-              <option>Guntur</option>
-              <option>Vijayawada</option>
-              <option>Amaravati / CRDA</option>
-              <option>Mangalagiri – Tadepalli</option>
+              <option value="Guntur">Guntur</option>
+              <option value="Vijayawada">Vijayawada</option>
+              <option value="Amaravati / CRDA">Amaravati / CRDA</option>
+              <option value="Mangalagiri – Tadepalli">
+                Mangalagiri – Tadepalli
+              </option>
             </select>
           </div>
 
@@ -195,6 +198,7 @@
               >Plot size (sq. yards)</label
             >
             <input
+              id="plotSizeInput"
               type="number"
               class="w-full rounded-lg border border-slate-300 px-3 py-2 outline-none focus:ring-2 focus:ring-blue-500"
               placeholder="e.g. 200"
@@ -208,6 +212,7 @@
               >No. of floors</label
             >
             <input
+              id="floorsInput"
               type="number"
               class="w-full rounded-lg border border-slate-300 px-3 py-2 outline-none focus:ring-2 focus:ring-blue-500"
             />
@@ -220,21 +225,44 @@
               >Usage type</label
             >
             <select
+              id="usageSelect"
               class="w-full rounded-lg border border-slate-300 px-3 py-2 outline-none focus:ring-2 focus:ring-blue-500"
             >
-              <option>Residential</option>
-              <option>Commercial</option>
-              <option>Mixed</option>
+              <option value="Residential">Residential</option>
+              <option value="Commercial">Commercial</option>
+              <option value="Mixed">Mixed</option>
             </select>
           </div>
         </div>
 
+        <!-- Calculate button -->
         <button
+          id="calculateBtn"
           class="mt-3 inline-flex items-center px-4 py-2 text-sm font-semibold rounded-lg bg-emerald-600 text-white hover:bg-emerald-700"
           data-i18n="btnCalculate"
         >
           Calculate / Check BPS
         </button>
+
+        <!-- RESULT BOX -->
+        <div id="bpsResult" class="mt-4 hidden">
+          <div
+            class="rounded-xl border border-emerald-200 bg-emerald-50 px-4 py-3 space-y-1"
+          >
+            <p
+              id="bpsResultTitle"
+              class="font-semibold text-emerald-800 text-sm md:text-base"
+            >
+              Result will appear here after calculation.
+            </p>
+            <p
+              id="bpsResultDetail"
+              class="text-xs md:text-sm text-emerald-900"
+            >
+              Fill the details above and click “Calculate / Check BPS”.
+            </p>
+          </div>
+        </div>
       </main>
 
       <!-- BPS RULES IMAGE SECTION -->
